Aggiustamento di 4 cagate

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: #000000;
   color: #F0EDCF;
+  font-size: 18px;
 }
 
 a {
@@ -23,8 +24,13 @@ h1, p {
   padding: 0px;
 }
 
+.sec-title{
+  font-weight: bold;
+  padding: 7px;
+}
+
 img { /*per evitare che le immagini strabordino*/
-  max-width: 50%;
+  max-width: 70%;
 }
 
 ul {
